manifest/media/sabnzbd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sab
  namespace: media
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: sab.defconsandbox.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:  
            name: sabnzbd-service
            port:
              number: 8080
